--- a/rtsptomqtt.cfg.example
+++ b/rtsptomqtt.cfg.example
@@ -1,5 +1,5 @@
 mqtt-server=mqtt://localhost
-mqtt-client=snapshots-publisher
+mqtt-client=rtsptomqtt
 mqtt-topic=snapshots
 interval=30
 rtsp-url=rtsp://192.168.0.1:554/Streaming/Channels/101
